--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "markdownify (>=1.2.0,<2.0.0)",
     "pyinstaller (>=6.16.0,<7.0.0)",
+    "alembic (>=1.13.1,<2.0.0)",
 ]
 
 [tool.poetry]
