feat(dev): Create cross-platform alembic wrapper script
Adds a cross-platform Python script to wrap the `alembic` command-line tool.

- Creates `scripts/run_alembic.py` to automatically handle the path to the `alembic.ini` configuration file.
- Registers the script as `devildex-alembic` in `pyproject.toml`.
- Developers can now conveniently run `poetry run devildex-alembic ...` from the project root without needing to specify the config path, improving the developer experience.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
 
 [tool.poetry]
 packages = [
-    { include = "devildex", from = "src" }
+    { include = "devildex", from = "src" },
+    { include = "scripts" },
 ]
 
 [tool.poetry.group.packaging.dependencies]
@@ -64,6 +65,7 @@ black = "^25.9.0"
 devildex = "devildex.main:main"
 devildex-register-project = "devildex.utils.companion:main"
 devildex-gemini-setup = "devildex.setup.gemini_cli:main"
+devildex-alembic = "scripts.run_alembic:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
