feat: Add Debian package build and test

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -211,6 +211,41 @@ jobs:
 
 
 
+  build-deb-package:
+    name: Build Debian Package
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install Poetry
+        run: pip install poetry
+
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y dpkg-dev debhelper
+
+      - name: Build Debian package
+        run: |
+          # Placeholder for .deb build commands
+          # This will involve creating a debian/ directory and using dpkg-buildpackage
+          echo "Building .deb package..."
+          # For now, let's just create a dummy .deb file for testing the workflow structure
+          mkdir -p dist/deb
+          echo "This is a dummy deb package" > dist/deb/devildex_1.0.0_amd64.deb
+
+      - name: Upload Debian Package artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-debian-package
+          path: dist/deb/*.deb
+
   build-docs:
     name: Build Documentation
     runs-on: ubuntu-24.04
@@ -287,7 +322,7 @@ jobs:
 
   create-and-upload-release:
     runs-on: ubuntu-latest
-    needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-package, build-docs]
+    needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-package, build-deb-package, build-docs]
     outputs:
       release_version: ${{ steps.get_version.outputs.version }}
     steps:
@@ -337,6 +372,13 @@ jobs:
         with:
           name: devildex-linux-bundle
           path: dist/linux-bundle
+
+      - name: Download Debian Package
+        if: steps.get_version.outputs.version != 'null'
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-debian-package
+          path: dist/debian-package
 
       - name: Unzip linux bundle artifact
         run: |
@@ -445,6 +487,22 @@ jobs:
           asset_path: ./dist/linux-bundle/devildex_linux
           asset_name: devildex-linux-bundle-v${{ steps.get_version.outputs.version }}
           asset_content_type: application/octet-stream
+
+      - name: Find Debian Package path
+        id: find_debian_package
+        if: steps.get_version.outputs.version != 'null'
+        run: echo "DEBIAN_PACKAGE_PATH=$(find dist/debian-package -name "*.deb" | head -n 1)" >> "$GITHUB_OUTPUT"
+
+      - name: Upload Debian Package asset
+        if: steps.get_version.outputs.version != 'null'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.find_debian_package.outputs.DEBIAN_PACKAGE_PATH }}
+          asset_name: devildex-debian-package-v${{ steps.get_version.outputs.version }}.deb
+          asset_content_type: application/vnd.debian.binary-package
 
       - name: Find macOS Wheel path
         id: find_macos_wheel
