fix: Correct workflow_run trigger for test-packaged-app.yml

--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -2,7 +2,7 @@ name: Test Packaged Application
 
 on:
   workflow_run:
-    workflows: ["Package Desktop Application"]
+    workflows: ["Build and Test All Artifacts"]
     types:
       - completed
 
