refactor: Rename Build Pyinstaller Bundle/Package job to Build Pyinstaller Package

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -142,7 +142,7 @@ jobs:
           path: dist/deb/*.deb
 
   build-package:
-    name: Build Pyinstaller Bundle/Package
+    name: Build Pyinstaller Package
     strategy:
       matrix: 
         os: [windows-latest, macos-latest, ubuntu-latest]
