--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -324,9 +324,42 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+  build-rpm-package:
+    name: Build RPM Package
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install RPM build tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y rpm rpm-build rpmlint
+
+      - name: Create source tarball
+        run: |
+          python3 setup.py sdist --formats=gztar
+          mv dist/*.tar.gz packaging/rpm/devildex-0.2.1.tar.gz
+
+      - name: Build RPM package
+        run: |
+          rpmbuild -ba packaging/rpm/devildex.spec
+
+      - name: Upload RPM Package artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-rpm-package
+          path: ~/rpmbuild/RPMS/x86_64/*.rpm
+
   create-and-upload-release:
     runs-on: ubuntu-latest
-    needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-deb-package, build-package, build-docs]
+    needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-deb-package, build-package, build-docs, build-rpm-package]
     outputs:
       release_version: ${{ steps.get_version.outputs.version }}
     steps:
