--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   build-linux-wheel:
+    if: false
     name: Build Linux Wheel
     runs-on: ubuntu-24.04
 
@@ -59,6 +60,7 @@ jobs:
           path: dist/*.whl
 
   build-macos-wheel:
+    if: false
     name: Build macOS Wheel
     runs-on: macos-latest
 
@@ -84,6 +86,7 @@ jobs:
           path: dist/*.whl
 
   build-windows-wheel:
+    if: false
     name: Build Windows Wheel
     runs-on: windows-latest
 
@@ -109,6 +112,7 @@ jobs:
           path: dist/*.whl
 
   build-deb-package:
+    if: false
     name: Build Debian Package
     runs-on: ubuntu-latest
     steps:
@@ -145,6 +149,7 @@ jobs:
           path: dist/deb/*.deb
 
   build-package:
+    if: false
     name: Build Pyinstaller Pkg
     strategy:
       matrix: 
@@ -251,6 +256,7 @@ jobs:
 
 
   build-docs:
+    if: false
     name: Build Documentation
     runs-on: ubuntu-24.04
     steps:
@@ -299,6 +305,7 @@ jobs:
           path: "build/html"
 
   deploy-docs:
+    if: false
     name: Deploy Documentation to GitHub Pages
     needs: build-docs
     runs-on: ubuntu-latest
@@ -360,7 +367,7 @@ jobs:
 
   create-and-upload-release:
     runs-on: ubuntu-latest
-    needs: [build-linux-wheel, build-macos-wheel, build-windows-wheel, build-deb-package, build-package, build-docs, build-rpm-package]
+    needs: [build-rpm-package]
     outputs:
       release_version: ${{ steps.get_version.outputs.version }}
     steps:
