--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -351,7 +351,7 @@ jobs:
 
       - name: Create source tarball
         run: |
-          pip install setuptools
+          python -m pip install setuptools
           poetry build --format sdist
           mv dist/*.tar.gz packaging/rpm/devildex-0.2.1.tar.gz
 
