--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -349,6 +349,9 @@ jobs:
         run: |
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel
 
+      - name: Install Poetry
+        run: pip install poetry
+
       - name: Create source tarball
         run: |
           python -m pip install setuptools
