--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -345,12 +345,21 @@ jobs:
         with:
           python-version: "3.13"
 
+      - name: Debug Python environment
+        run: |
+          which python
+          python -c "import sys; print(sys.path)"
+          python -c "import encodings; print(encodings.__file__)"
+
       - name: Install RPM build tools
         run: |
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel
 
       - name: Install Poetry
         run: python -m pip install poetry
+
+      - name: Install project dependencies with Poetry
+        run: poetry install --no-root
 
       - name: Create source tarball
         run: |
