--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -342,7 +342,10 @@ jobs:
 
       - name: Install RPM build tools
         run: |
-          dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel python3-poetry pyproject-rpm-macros
+          dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros
+
+      - name: Install Poetry via pip
+        run: pip install poetry
 
       - name: Install project dependencies with Poetry
         run: poetry run python3 -m poetry install --no-root
