--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -348,7 +348,9 @@ jobs:
         run: pip install pipx
 
       - name: Install Poetry via pipx
-        run: pipx install poetry
+        run: |
+          pipx install poetry
+          echo "/github/home/.local/bin" >> $GITHUB_PATH
 
       - name: Install project dependencies with Poetry
         run: poetry run python3 -m poetry install --no-root
