--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -353,7 +353,7 @@ jobs:
           echo "/github/home/.local/bin" >> $GITHUB_PATH
 
       - name: Install project dependencies with Poetry
-        run: poetry run python3 -m poetry install --no-root
+        run: poetry install --no-root
 
       - name: Create source tarball
         run: |
