--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -342,7 +342,7 @@ jobs:
 
       - name: Install RPM build tools
         run: |
-          dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros
+          dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel python3-poetry pyproject-rpm-macros
 
       - name: Install pipx
         run: pip install pipx
@@ -363,6 +363,7 @@ jobs:
 
       - name: Build RPM package
         run: |
+          export PYTHONPATH=/usr/lib/python3.13/site-packages:$PYTHONPATH
           rpmbuild -ba packaging/rpm/devildex.spec
 
       - name: Upload RPM Package artifact
