--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -342,7 +342,7 @@ jobs:
 
       - name: Install pyenv dependencies
         run: |
-          dnf install -y git make zlib-devel bzip2-devel readline-devel sqlite-devel openssl-devel libffi-devel bzip2 libtool libyaml-devel
+          dnf install -y git make zlib-devel bzip2-devel readline-devel sqlite-devel openssl-devel libffi-devel bzip2 libtool libyaml-devel rpm-build
 
       - name: Install pyenv
         run: |
