--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -335,7 +335,7 @@ jobs:
     name: Build RPM Package
     runs-on: ubuntu-latest
     container:
-      image: fedora/rpm-build
+      image: archlinux/archlinux
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -346,9 +346,10 @@ jobs:
           pipx install poetry
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Install Python-specific RPM build dependencies
+      - name: Install Arch Linux dependencies
         run: |
-          dnf install -y python3-devel python3-setuptools python3-pip pyproject-rpm-macros python3-wheel
+          pacman -Syu --noconfirm
+          pacman -S --noconfirm base-devel rpm python python-pip python-setuptools python-wheel python-poetry
 
       - name: Install project dependencies with Poetry
         run: poetry install --no-root
