--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -335,7 +335,7 @@ jobs:
     name: Build RPM Package
     runs-on: ubuntu-latest
     container:
-      image: centos/stream8
+      image: centos:stream
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
