--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -335,15 +335,13 @@ jobs:
     name: Build RPM Package
     runs-on: ubuntu-latest
     container:
-      image: quay.io/centos/centos:stream8
+      image: rockylinux/rockylinux:8
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install RPM build tools and Python packages
         run: |
-          dnf clean all
-          dnf makecache
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros
 
       - name: Install Poetry globally
