--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -345,7 +345,9 @@ jobs:
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros python3-poetry
 
       - name: Install project dependencies with Poetry
-        run: poetry install --no-root
+        run: |
+          export PATH="/usr/bin:$PATH"
+          poetry install --no-root
 
       - name: Create source tarball
         run: |
